--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="gray">#808080</color>
+    <color name="light_gray">#e9e9e9</color>
     <color name="main_color">#B388FF</color>
     <color name="main_subColor">#F3ECFD</color>
     <color name="backgroundTransparency">#00ff0000</color>
