--- a/app/src/main/res/layout/diary_frame.xml
+++ b/app/src/main/res/layout/diary_frame.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
@@ -20,7 +20,7 @@
             android:padding="10dp"
             android:text="@string/diary"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,6 +53,7 @@
             app:strokeWidth="1dp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/diary_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="10dp"
