--- a/app/src/main/res/layout/chart_frame.xml
+++ b/app/src/main/res/layout/chart_frame.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
@@ -20,7 +20,7 @@
             android:padding="10dp"
             android:text="@string/chart"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,10 +44,12 @@
                 android:backgroundTint="@color/main_color"
                 android:fontFamily="@font/font_main"
                 android:text="@string/whole"
+                android:textSize="13sp"
                 android:textColor="@color/white"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/main_color"
-                app:strokeWidth="1dp" />
+                app:strokeWidth="1dp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/chart_yearButton"
@@ -55,13 +57,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
+                android:textSize="13sp"
                 android:backgroundTint="@color/main_subColor"
                 android:fontFamily="@font/font_main"
                 android:text="@string/curYear"
                 android:textColor="@color/main_color"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/main_color"
-                app:strokeWidth="1dp" />
+                app:strokeWidth="1dp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/chart_monthButton"
@@ -69,13 +73,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
+                android:textSize="13sp"
                 android:backgroundTint="@color/main_subColor"
                 android:fontFamily="@font/font_main"
                 android:text="@string/curMonth"
                 android:textColor="@color/main_color"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/main_color"
-                app:strokeWidth="1dp" />
+                app:strokeWidth="1dp"
+                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/chart_weekendButton"
@@ -87,114 +93,154 @@
                 android:fontFamily="@font/font_main"
                 android:text="@string/curWeekend"
                 android:textColor="@color/main_color"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 app:cornerRadius="20dp"
                 app:strokeColor="@color/main_color"
-                app:strokeWidth="1dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/icon_angry1"
-                android:contentDescription="@string/angryIconDescription"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/icon_angry2"
-                android:contentDescription="@string/angryIconDescription"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/icon_angry3"
-                android:contentDescription="@string/angryIconDescription"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/icon_angry4"
-                android:contentDescription="@string/angryIconDescription"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/icon_angry5"
-                android:contentDescription="@string/angryIconDescription"
-                />
-
+                app:strokeWidth="1dp"
+                style="?android:attr/buttonBarButtonStyle" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/layout_radius"
+            android:backgroundTint="@color/white"
+            android:orientation="vertical"
+            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout2">
+
+            <LinearLayout
+                android:id="@+id/linearLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/gray"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry1"
+                    tools:ignore="NestedWeights" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry2" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry3" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout7"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/angry_2"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/angry_3"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/angry_4"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_main"
-                android:gravity="center"
-                android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/angry_5"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/gray"
+                    android:textSize="20sp"
+                    tools:ignore="NestedWeights" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/angry_2"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/angry_3"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry4" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/angryIconDescription"
+                    android:src="@drawable/icon_angry5" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/angry_4"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/font_main"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/angry_5"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
         </LinearLayout>
+
 
         <com.github.mikephil.charting.charts.PieChart
             android:layout_width="match_parent"
