--- a/app/src/main/res/layout/setting_frame.xml
+++ b/app/src/main/res/layout/setting_frame.xml
@@ -82,6 +82,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView10">
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/countSetting_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -118,6 +119,7 @@
                 android:background="@color/main_color" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/diarySetting_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -145,7 +147,42 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:contentDescription="@string/nextArrowDescription"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/main_color" />
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ADSetting_Button"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/font_main"
+                    android:paddingStart="15dp"
+                    android:text="@string/ADView"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="RtlSymmetry" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_next_arrow"
+                    android:padding="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/nextArrowDescription"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
         <TextView
             android:id="@+id/textView7"
@@ -168,6 +205,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7">
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/backUpSetting_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -217,6 +255,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView9">
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/inquirySetting_Button"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
