--- a/app/src/main/res/layout/diary_frame.xml
+++ b/app/src/main/res/layout/diary_frame.xml
@@ -37,12 +37,12 @@
 
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/diary_timeSelect_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/main_color"
             android:fontFamily="@font/font_main"
-            android:text="전체"
+            android:text="@string/whole"
             android:textColor="@color/white"
             android:layout_marginEnd="10dp"
             app:cornerRadius="20dp"
