--- a/app/src/main/res/layout/diary_write_layout.xml
+++ b/app/src/main/res/layout/diary_write_layout.xml
@@ -47,6 +47,7 @@
 
 
             <ImageButton
+                android:id="@+id/diary_write_tempSaveButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,6 +57,7 @@
                 android:contentDescription="@string/writeTempSave"/>
 
             <ImageButton
+                android:id="@+id/diary_write_saveButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -72,7 +74,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/font_main"
             android:padding="10dp"
-            android:text="2022.10.16"
+            android:text="@{viewModel.writeDate}"
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -280,6 +282,7 @@
                 android:layout_marginTop="5dp"
                 android:background="@color/backgroundTransparency"
                 android:hint="@string/diaryEditHint"
+                android:text="@={viewModel.diaryText}"
                 android:fontFamily="@font/font_main"
                 android:textColorHint="@color/main_color"
                 android:textColor="@color/main_color"
